--- a/public/js/app/customers/views/index.html
+++ b/public/js/app/customers/views/index.html
@@ -29,7 +29,7 @@
               <div class="box">
 
                 <div class="box-header with-border">
-                  <h3 class="box-title">Clientes</h3>
+                  <h3 class="box-title"><i class="fa fa-users"></i> Clientes</h3>
                   <div class="box-tools">
                   <form ng-keyup="searchCustomer()">
                     <div class="input-group" style="width: 200px;">
