--- a/public/js/app/stores/views/index.html
+++ b/public/js/app/stores/views/index.html
@@ -6,7 +6,7 @@
           </h1>
           <ol class="breadcrumb">
             <li><a href="/"><i class="fa fa-dashboard"></i> Home</a></li>
-            <li class="active">Stores</li>
+            <li class="active">Tiendas</li>
           </ol>
 
           
@@ -18,7 +18,7 @@
         <section class="content">
         <div class="row">
         <div class="col-md-12">
-          <a href="/stores/create" type="submit" class="btn btn-primary pull-left">Add Stores</a> 
+          <a href="/stores/create" type="submit" class="btn btn-primary pull-left">Añadir Tienda</a>
           </div>
         </div>
         </br>
