--- a/public/js/app/employees/views/index.html
+++ b/public/js/app/employees/views/index.html
@@ -146,6 +146,11 @@
                       <input type="text" class="form-control" name="descripcion" placeholder="Psajes"
                       ng-model="employeecost.pasajes" >
                      </div>
+                      <div class="form-group" >
+                      <label for="descripcion">Descuento</label>
+                      <input type="text" class="form-control" name="descripcion" placeholder="Psajes"
+                      ng-model="employeecost.descuento" >
+                     </div>
                      <div class="form-group" >
                       <label for="descripcion">Total</label>
                       <input type="text" class="form-control" name="descripcion" placeholder="Total"
@@ -211,6 +216,11 @@
                       <label for="descripcion">Pasajes</label>
                       <input ng-disabled="ngenabled" type="text" class="form-control" name="descripcion" placeholder="Psajes"
                       ng-model="employeecost.pasajes" >
+                     </div>
+                     <div class="form-group" >
+                      <label for="descripcion">Descuento</label>
+                      <input type="text" class="form-control" name="descripcion" placeholder="Psajes"
+                      ng-model="employeecost.descuento" >
                      </div>
                      <div class="form-group" >
                       <label for="descripcion">Total</label>
