--- a/public/js/app/employees/views/index.html
+++ b/public/js/app/employees/views/index.html
@@ -120,17 +120,17 @@
                        <div class=" callout-info" >
                       <div  class="form-group" >
                       <label for="descripcion">Sueldo Fijo</label>
-                      <input  type="text" class="form-control" name="descripcion" placeholder="Sueldo Fijo" ng-model="employeecost.SueldoFijo">
+                      <input  class="form-control" type="number" ng-blur="CalcCostos()" name="descripcion" placeholder="Sueldo Fijo" ng-model="employeecost.SueldoFijo">
                      </div>
                      
                      <div  class="form-group" >
                       <label for="descripcion">Comisiones</label>
-                      <input type="text" class="form-control" name="descripcion" placeholder="Comisiones"
+                      <input type="number"  class="form-control" name="descripcion" placeholder="Comisiones"
                       ng-model="employeecost.comisiones" >
                      </div>
                      <div class="form-group" >
                       <label for="descripcion">Seguro</label>
-                      <input type="text" class="form-control" name="descripcion" placeholder="Seguro"
+                      <input type="number" ng-blur="CalcCostos()"class="form-control" name="descripcion" placeholder="Seguro"
                       ng-model="employeecost.seguro">
                      </div>
           </div> 
@@ -138,22 +138,22 @@
           <div class="col-md-6">
                      <div class="form-group" >
                       <label for="descripcion">Menu</label>
-                      <input type="text" class="form-control" name="descripcion" placeholder="Menu"
+                      <input type="number" ng-blur="CalcCostos()" class="form-control" name="descripcion" placeholder="Menu"
                       ng-model="employeecost.menu" >
                      </div>
                       <div class="form-group" >
                       <label for="descripcion">Pasajes</label>
-                      <input type="text" class="form-control" name="descripcion" placeholder="Psajes"
+                      <input type="number" ng-blur="CalcCostos()" class="form-control" name="descripcion" placeholder="Psajes"
                       ng-model="employeecost.pasajes" >
                      </div>
                       <div class="form-group" >
                       <label for="descripcion">Descuento</label>
-                      <input type="text" class="form-control" name="descripcion" placeholder="Psajes"
+                      <input type="number" ng-blur="CalcCostos()" class="form-control" name="descripcion" placeholder="Psajes"
                       ng-model="employeecost.descuento" >
                      </div>
                      <div class="form-group" >
                       <label for="descripcion">Total</label>
-                      <input type="text" class="form-control" name="descripcion" placeholder="Total"
+                      <input ng-disabled="true" type="number" ng-blur="CalcCostos()" class="form-control" name="descripcion" placeholder="Total"
                       ng-model="employeecost.total">
                      </div>
               </div>
@@ -191,17 +191,17 @@
                        <div class=" callout-info" >
                        <div class="form-group" >
                       <label for="descripcion">Sueldo Fijo</label>
-                      <input ng-disabled="ngenabled" type="text" class="form-control" name="descripcion" placeholder="Sueldo Fijo" ng-model="employeecost.SueldoFijo">
+                      <input string-to-number ng-disabled="ngenabled" type="number" ng-blur="CalcCostos()" class="form-control" name="descripcion" placeholder="Sueldo Fijo" ng-model="employeecost.SueldoFijo">
                      </div>
                      <div class="form-group" >
                       <label for="descripcion">Comisiones</label>
-                      <input ng-disabled="ngenabled" type="text" class="form-control" name="descripcion" placeholder="Comisiones"
+                      <input ng-disabled="ngenabled" type="number"  class="form-control" name="descripcion" placeholder="Comisiones"
                       ng-model="employeecost.comisiones" >
                      </div>
               
                      <div class="form-group" >
                       <label for="descripcion">Seguro</label>
-                      <input ng-disabled="ngenabled" type="text" class="form-control" name="descripcion" placeholder="Seguro"
+                      <input ng-disabled="ngenabled" type="number" ng-blur="CalcCostos()" class="form-control" name="descripcion" placeholder="Seguro"
                       ng-model="employeecost.seguro">
                      </div>
         </div> 
@@ -209,22 +209,22 @@
           <div class="col-md-6">
                      <div class="form-group" >
                       <label for="descripcion">Menu</label>
-                      <input ng-disabled="ngenabled" type="text" class="form-control" name="descripcion" placeholder="Menu"
+                      <input ng-disabled="ngenabled" type="number" ng-blur="CalcCostos()" class="form-control" name="descripcion" placeholder="Menu"
                       ng-model="employeecost.menu" >
                      </div>
                       <div class="form-group" >
                       <label for="descripcion">Pasajes</label>
-                      <input ng-disabled="ngenabled" type="text" class="form-control" name="descripcion" placeholder="Psajes"
+                      <input ng-disabled="ngenabled" type="number" ng-blur="CalcCostos()" class="form-control" name="descripcion" placeholder="Psajes"
                       ng-model="employeecost.pasajes" >
                      </div>
                      <div class="form-group" >
                       <label for="descripcion">Descuento</label>
-                      <input type="text" class="form-control" name="descripcion" placeholder="Psajes"
+                      <input type="number" class="form-control" ng-blur="CalcCostos()" name="descripcion" placeholder="Psajes"
                       ng-model="employeecost.descuento" >
                      </div>
                      <div class="form-group" >
                       <label for="descripcion">Total</label>
-                      <input ng-disabled="ngenabled" type="text" class="form-control" name="descripcion" placeholder="Total"
+                      <input ng-disabled="ngenabled" type="number" class="form-control" name="descripcion" placeholder="Total"
                       ng-model="employeecost.total">
                      </div>
           </div>
