--- a/public/js/app/orderSales/views/index.html
+++ b/public/js/app/orderSales/views/index.html
@@ -78,7 +78,7 @@
                       <td>{{row.montoTotal}}</td>                      
                       <td>{{row.customer.nombres+' '+row.customer.apellidos+' - '+row.customer.empresa}}</td>
                       <td>{{row.employee.nombres+' '+row.employee.apellidos}}</td>
-                      <td>{{row.estado==1? 'Por Entregar':'Entregado'}}</td>
+                      <td>{{row.estado==1? 'Por Entregar':row.estado==0? 'Entregado':'Anulado'}}</td>
                       <td>{{row.estadoPago==1? 'Credito':'Contado'}}</td>
                       <td><a ng-click="editorder(row)" class="btn btn-warning btn-xs">Ver</a></td>
                       
