--- a/public/report/Tiket.jrxml
+++ b/public/report/Tiket.jrxml
@@ -4,10 +4,19 @@
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="idVariante" class="java.lang.String"/>
+	<parameter name="cantidad" class="java.lang.String"/>
 	<queryString>
-		<![CDATA[select variants.id as Idvar,products.modelo,variants.codigo,products.image,(select GROUP_CONCAT((CONCAT(atributes.nombre,"/",detAtr.descripcion)) SEPARATOR "-") from detAtr left join atributes on atributes.id=detAtr.atribute_id where detAtr.variant_id=Idvar and atributes.nombre='Taco' )as Taco,(select GROUP_CONCAT((CONCAT(atributes.nombre,"/",detAtr.descripcion)) SEPARATOR "-") from detAtr left join atributes on atributes.id=detAtr.atribute_id where detAtr.variant_id=Idvar and atributes.nombre='Talla' )as Talla from detPres inner join variants on variants.id=detPres.variant_id inner join detailPurchases on detailPurchases.detPres_id=detPres.id inner join purchases on purchases.id=detailPurchases.purchases_id inner join products on products.id=variants.product_id left join detAtr on detAtr.variant_id=variants.id left join atributes on atributes.id=detAtr.atribute_id where purchases.id=$P{idVariante} group by Idvar]]>
+		<![CDATA[call entrada($P{idVariante},$P{cantidad});]]>
 	</queryString>
-	<field name="Idvar" class="java.lang.Long"/>
+	<field name="id" class="java.lang.Integer">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="cantidad" class="java.math.BigDecimal">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="Idvar" class="java.lang.Integer">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
 	<field name="modelo" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
@@ -17,8 +26,12 @@
 	<field name="image" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="Taco" class="java.lang.String"/>
-	<field name="Talla" class="java.lang.String"/>
+	<field name="Taco" class="java.lang.String">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="Talla" class="java.lang.String">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
 	<background>
 		<band/>
 	</background>
@@ -75,6 +88,10 @@
 				<reportElement x="234" y="12" width="100" height="97" uuid="0459eea6-7a56-42fb-9526-9ee401cde13e"/>
 				<imageExpression><![CDATA["/usr/share/nginx/html/salesfly/public/"+$F{image}]]></imageExpression>
 			</image>
+			<textField>
+				<reportElement x="346" y="89" width="100" height="20" uuid="ceec7c54-fce7-459a-b44a-82aba927422b"/>
+				<textFieldExpression><![CDATA[$V{COLUMN_COUNT}]]></textFieldExpression>
+			</textField>
 		</band>
 	</detail>
 	<columnFooter>
