--- a/public/js/app/employees/views/index.html
+++ b/public/js/app/employees/views/index.html
@@ -219,7 +219,7 @@
                      </div>
                      <div class="form-group" >
                       <label for="descripcion">Descuento</label>
-                      <input type="number" class="form-control" ng-blur="CalcCostos()" name="descripcion" placeholder="Psajes"
+                      <input ng-disabled="ngenabled" type="number" class="form-control" ng-blur="CalcCostos()" name="descripcion" placeholder="Psajes"
                       ng-model="employeecost.descuento" >
                      </div>
                      <div class="form-group" >
