--- a/public/report/CodigoBarras.jrxml
+++ b/public/report/CodigoBarras.jrxml
@@ -5,10 +5,9 @@
 	<property name="ireport.y" value="0"/>
 	<parameter name="VarCode" class="java.lang.String"/>
 	<queryString>
-		<![CDATA[select variants.id as Idvar,products.modelo,variants.sku from detPres inner join variants on variants.id=detPres.variant_id inner join detailPurchases on detailPurchases.detPres_id=detPres.id inner join purchases on purchases.id=detailPurchases.purchases_id inner join products on products.id=variants.product_id left join detAtr on detAtr.variant_id=variants.id left join atributes on atributes.id=detAtr.atribute_id where purchases.id=$P{VarCode} group by Idvar]]>
+		<![CDATA[call principalSku($P{VarCode});]]>
 	</queryString>
-	<field name="Idvar" class="java.lang.Long"/>
-	<field name="modelo" class="java.lang.String">
+	<field name="id" class="java.lang.Integer">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
 	<field name="sku" class="java.lang.Long">
@@ -37,6 +36,10 @@
 			<textField>
 				<reportElement x="86" y="40" width="100" height="20" uuid="e4e98223-61de-4e54-8f07-7327bd53a45c"/>
 				<textFieldExpression><![CDATA[$F{sku}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="253" y="40" width="100" height="20" uuid="a8e278cd-df00-4602-a7da-a823a096842d"/>
+				<textFieldExpression><![CDATA[$V{COLUMN_COUNT}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
