--- a/public/report/Tiket.jrxml
+++ b/public/report/Tiket.jrxml
@@ -6,7 +6,7 @@
 	<parameter name="idVariante" class="java.lang.String"/>
 	<parameter name="cantidad" class="java.lang.String"/>
 	<queryString>
-		<![CDATA[call entrada($P{idVariante},$P{cantidad});]]>
+		<![CDATA[call principal($P{idVariante});]]>
 	</queryString>
 	<field name="id" class="java.lang.Integer">
 		<fieldDescription><![CDATA[]]></fieldDescription>
