--- a/public/js/app/cashes/views/index.html
+++ b/public/js/app/cashes/views/index.html
@@ -36,14 +36,14 @@
                   <div class="row">
                     <div class="col-md-4">
                       <div class="form-group" >
-                        <select class="form-control" name="" ng-model="stores.id" ng-click="mostrarCajas()" ng-options="item.id as item.nombreTienda for item in stores">
+                        <select class="form-control" name="" ng-model="stores.id" ng-change="mostrarCajas()" ng-options="item.id as item.nombreTienda for item in stores">
                           <option value="">--Elije Tienda--</option>
                         </select>
                       </div>
                     </div>
                     <div class="col-md-4">
                         <div class="form-group" >
-                          <select class="form-control" name="" ng-model="cash.cashHeader_id" ng-options="item.id as item.nombre for item in cashHeaders" ng-click="cargarCajasDiarias()">
+                          <select class="form-control" name="" ng-model="cash.cashHeader_id" ng-options="item.id as item.nombre for item in cashHeaders" ng-change="cargarCajasDiarias()">
                           <option value="">--Elije Caja--</option>
                           </select>
                         </div>
