--- a/public/js/app/sales/views/index.html
+++ b/public/js/app/sales/views/index.html
@@ -61,7 +61,7 @@
                   <table class="table table-bordered">
                     <tr>
                       <th style="width: 10px">#</th>
-                      <th>Fechass</th>
+                      <th>Fechas</th>
                       <th>Fecha Anulado</th>
                       <th>Total</th>                                             
                       <th>Cliente</th>
