--- a/public/js/app/orderPurchases/views/index.html
+++ b/public/js/app/orderPurchases/views/index.html
@@ -5,7 +5,7 @@
           </h1>
           <ol class="breadcrumb">
             <li><a href="/"><i class="fa fa-dashboard"></i> Home</a></li>
-            <li class="active">Order de Compras</li>
+            <li class="active"><a target="_self"  href="/purchases" >Compras</a></li>
           </ol>
 
           
