--- a/public/js/app/orderSales/views/index.html
+++ b/public/js/app/orderSales/views/index.html
@@ -61,11 +61,11 @@
                   <table class="table table-bordered">
                     <tr>
                       <th style="width: 10px">#</th>
-                      <th>Fechass</th>
+                      <th>Fechas</th>
                       <th>Fecha Anulado</th>
                       <th>Total</th>                                             
                       <th>Cliente</th>
-                      <th>Vendedort</th>
+                      <th>Vendedor</th>
                       <th>Estado Pago</th>
                       <th>Estado Venta</th>
                       <th style="width: 40px">Detalle</th>
