--- a/public/js/app/products/views/index.html
+++ b/public/js/app/products/views/index.html
@@ -193,7 +193,7 @@
                     <td>{{$index + 1}}</td>
                     <td>{{row.nombre}}</td>
                     <td>{{row.stockActual}}</td>
-                    <td>{{row.stockPorLlegar}}</td>
+                    <td>{{row.porLlegar}}</td>
                     <td>{{row.codigo}}</td>
                     <td>{{row.sku}}</td>
 
