--- a/public/js/app/purchases/views/index.html
+++ b/public/js/app/purchases/views/index.html
@@ -149,8 +149,10 @@
                       <td ng-if="row.orderPurchase_id>0"><a target="_self" ng-href="/orderPurchases/edit/{{row.orderPurchase_id}}">Ver Orden</a></td>
                       <td ng-if="row.orderPurchase_id==null">Sin Orden</td>
                       <td>{{row.descuento}}</td>
-                      <td>{{row.montoBruto}}</td>
-                      <td>{{row.montoTotal}}</td>
+                      <td ng-if="row.tCambio=='sol'">S/.{{row.montoBruto}} <em style="color:blue;">$({{row.montoBrutoDolar}})</em></td>
+                      <td ng-if="row.tCambio=='dolar'">$.{{row.montoBrutoDolar}} <em style="color:blue;">S/.({{row.montoBruto}})</em></td>
+                      <td ng-if="row.tCambio=='sol'">S/.{{row.montoTotal}} <em style="color:blue;">$({{row.montoTotalDolar}})</em></td>
+                      <td ng-if="row.tCambio=='dolar'">$.{{row.montoTotalDolar}} <em style="color:blue;">S/.({{row.montoTotal}})</em></td>
                       <td ng-if="row.saldo>0"><a  class="btn btn-primary btn-xs" ng-href="/purchases/show/{{row.id}}">Pagar</a>
                       </td>
                       <td ng-if="row.saldo<=0"><a class="btn btn-primary btn-xs" ng-href="/purchases/show/{{row.id}}">Ver Pagos</a>
