--- a/public/js/app/cashes/views/index.html
+++ b/public/js/app/cashes/views/index.html
@@ -77,6 +77,7 @@
                   <table class="table table-bordered">
                     <tr>
                       <th style="width: 10px">#</th>
+                      <th>Usuario</th>
                       <th>Fecha Inicio</th>
                       <th>Fecha Fin</th>
                       <th>Monto Inicial</th>
@@ -92,6 +93,7 @@
                     
                     <tr ng-repeat="row in cashes">
                       <td>{{$index + 1}}</td>
+                      <td>{{row.name}}</td>
                       <td>{{row.fechaInicio}}</td>
                       <td>{{row.fechaFin}}</td>
                       <td>{{row.montoInicial}}</td>
