--- a/public/report/ventasPorCliente.jrxml
+++ b/public/report/ventasPorCliente.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="ventasPorCliente" language="groovy" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="8428ce79-5e07-458c-be6d-35e180ef1dbd">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="ventasPorCliente" language="groovy" pageWidth="555" pageHeight="842" columnWidth="555" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="8428ce79-5e07-458c-be6d-35e180ef1dbd">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -32,40 +32,50 @@
 		<band/>
 	</background>
 	<title>
-		<band height="72">
-			<frame>
-				<reportElement mode="Opaque" x="-20" y="-20" width="595" height="92" backcolor="#006699" uuid="04596b86-f5c9-45e2-836e-09d5dd79bda1"/>
-				<staticText>
-					<reportElement x="20" y="20" width="234" height="43" forecolor="#FFFFFF" uuid="3bcd9fca-3f78-454b-bd88-2eb63f0a5a74"/>
-					<textElement>
-						<font size="34" isBold="true"/>
-					</textElement>
-					<text><![CDATA[TITLE]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="395" y="43" width="180" height="20" forecolor="#FFFFFF" uuid="b6713dc7-8636-4316-bec3-ecdddeb097f5"/>
-					<textElement textAlignment="Right">
-						<font size="14" isBold="false"/>
-					</textElement>
-					<text><![CDATA[Add a description here]]></text>
-				</staticText>
-			</frame>
-		</band>
+		<band/>
 	</title>
 	<pageHeader>
-		<band height="13"/>
+		<band/>
 	</pageHeader>
 	<columnHeader>
 		<band height="21">
 			<line>
-				<reportElement x="-20" y="20" width="595" height="1" forecolor="#666666" uuid="29b4ac69-fb61-4222-9838-91abd3f6ae51"/>
+				<reportElement x="0" y="20" width="555" height="1" forecolor="#666666" uuid="29b4ac69-fb61-4222-9838-91abd3f6ae51"/>
 			</line>
 			<staticText>
-				<reportElement mode="Opaque" x="0" y="0" width="555" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="1f016782-01c9-419c-843b-de47fe51ce41"/>
+				<reportElement mode="Opaque" x="0" y="0" width="128" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="1f016782-01c9-419c-843b-de47fe51ce41"/>
 				<textElement textAlignment="Center">
 					<font size="14" isBold="true"/>
 				</textElement>
-				<text><![CDATA[id]]></text>
+				<text><![CDATA[Fecha]]></text>
+			</staticText>
+			<staticText>
+				<reportElement mode="Opaque" x="128" y="0" width="119" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="16e0c8a7-cef8-4d84-ab79-35baea943282"/>
+				<textElement textAlignment="Center">
+					<font size="14" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Monto Bruto]]></text>
+			</staticText>
+			<staticText>
+				<reportElement mode="Opaque" x="247" y="-1" width="102" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="205be8fa-0bfa-4907-983f-8a77c1f904d9"/>
+				<textElement textAlignment="Center">
+					<font size="14" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Descuento]]></text>
+			</staticText>
+			<staticText>
+				<reportElement mode="Opaque" x="349" y="0" width="100" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="480ffe04-8d00-412b-81cc-c699978b0584"/>
+				<textElement textAlignment="Center">
+					<font size="14" isBold="true"/>
+				</textElement>
+				<text><![CDATA[IGV]]></text>
+			</staticText>
+			<staticText>
+				<reportElement mode="Opaque" x="449" y="0" width="106" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="687e3759-0783-44cc-bf9c-2e971018f62f"/>
+				<textElement textAlignment="Center">
+					<font size="14" isBold="true"/>
+				</textElement>
+				<text><![CDATA[MontoTotal]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
@@ -74,12 +84,25 @@
 			<line>
 				<reportElement positionType="FixRelativeToBottom" x="0" y="19" width="555" height="1" uuid="0562c2c9-437a-4da3-8ecf-7423787e6e10"/>
 			</line>
-			<textField isStretchWithOverflow="true">
-				<reportElement x="1" y="0" width="555" height="20" uuid="94a26866-ad63-4a74-b440-d2284603eafa"/>
-				<textElement>
-					<font size="14"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{id}]]></textFieldExpression>
+			<textField pattern="dd/MM/yyyy h.mm a">
+				<reportElement x="0" y="0" width="100" height="20" uuid="2d05637e-c5f2-4585-959f-7751c2dcd038"/>
+				<textFieldExpression><![CDATA[$F{fechaPedido}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="455" y="0" width="100" height="20" uuid="bea43017-754f-442c-a8ba-e5b7794d37c3"/>
+				<textFieldExpression><![CDATA[$F{montoTotal}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="128" y="0" width="119" height="20" uuid="fed1f629-0b9f-424a-a793-787f9eb4ea1a"/>
+				<textFieldExpression><![CDATA[$F{montoBruto}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="247" y="0" width="100" height="20" uuid="a25f6cba-668e-4f92-b5a3-2994875b1d20"/>
+				<textFieldExpression><![CDATA[$F{descuento}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="349" y="0" width="100" height="20" uuid="80f17030-c35b-4d7f-95e7-01bf77cfbdb0"/>
+				<textFieldExpression><![CDATA[$F{igv}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
@@ -87,21 +110,7 @@
 		<band/>
 	</columnFooter>
 	<pageFooter>
-		<band height="17">
-			<textField>
-				<reportElement mode="Opaque" x="0" y="4" width="515" height="13" backcolor="#E6E6E6" uuid="5a892a5e-cb19-4870-a598-6d6198ce010d"/>
-				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA["Page "+$V{PAGE_NUMBER}+" of"]]></textFieldExpression>
-			</textField>
-			<textField evaluationTime="Report">
-				<reportElement mode="Opaque" x="515" y="4" width="40" height="13" backcolor="#E6E6E6" uuid="dcd26dea-485e-47e5-a2ca-866862664511"/>
-				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
-			</textField>
-			<textField pattern="EEEEE dd MMMMM yyyy">
-				<reportElement x="0" y="4" width="100" height="13" uuid="80d95740-6571-4309-9b8d-4d092022c7bd"/>
-				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
-			</textField>
-		</band>
+		<band height="1"/>
 	</pageFooter>
 	<summary>
 		<band/>
