--- a/public/report/VentasClientePrincipal.jrxml
+++ b/public/report/VentasClientePrincipal.jrxml
@@ -3,6 +3,17 @@
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
+	<subDataset name="dataset1" uuid="af907a56-489e-4dce-9950-2240a30230c8">
+		<queryString language="SQL">
+			<![CDATA[select sales.id,sales.montoTotal from sales inner join customers on customers.id=sales.customer_id;]]>
+		</queryString>
+		<field name="id" class="java.lang.Long">
+			<fieldDescription><![CDATA[]]></fieldDescription>
+		</field>
+		<field name="montoTotal" class="java.math.BigDecimal">
+			<fieldDescription><![CDATA[]]></fieldDescription>
+		</field>
+	</subDataset>
 	<parameter name="cliente_id" class="java.lang.Integer">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
@@ -117,24 +128,22 @@
 				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
 				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "ventasPorCliente.jasper"]]></subreportExpression>
 			</subreport>
-			<stackedAreaChart>
+			<pieChart>
 				<chart>
-					<reportElement x="107" y="151" width="200" height="100" uuid="9ea07383-0e92-4a10-932e-41dd766050af"/>
+					<reportElement x="270" y="149" width="200" height="100" uuid="da07ad60-7a85-4385-b370-9d355726167e"/>
 					<chartTitle/>
 					<chartSubtitle/>
 					<chartLegend/>
 				</chart>
-				<categoryDataset/>
-				<areaPlot>
+				<pieDataset>
+					<keyExpression><![CDATA[""]]></keyExpression>
+					<valueExpression><![CDATA[new Double(0)]]></valueExpression>
+				</pieDataset>
+				<piePlot>
 					<plot/>
-					<categoryAxisFormat>
-						<axisFormat/>
-					</categoryAxisFormat>
-					<valueAxisFormat>
-						<axisFormat/>
-					</valueAxisFormat>
-				</areaPlot>
-			</stackedAreaChart>
+					<itemLabel/>
+				</piePlot>
+			</pieChart>
 		</band>
 	</detail>
 	<columnFooter>
