--- a/public/js/app/purchases/views/index.html
+++ b/public/js/app/purchases/views/index.html
@@ -125,7 +125,7 @@
           </div>
           </div>
            
-                  
+                   <div class="box-body table-responsive no-padding">
                   <table class="table table-bordered table-hover">
                     <tr>
                       <th style="width: 10px">#</th>
@@ -135,6 +135,8 @@
                       <th>Orden de Compra</th>
                       <th>Descuento</th>
                       <th>Monto Bruto</th>
+                      <th>IGV</th>
+                      <th>Monto Base</th>
                       <th>Monto Total</th>
                       <th>N/S Fctura</th>
                       <th style="width: 40px">Pagar Pedido</th>
@@ -150,9 +152,16 @@
                       <td ng-if="row.orderPurchase_id>0"><a target="_self" ng-href="/orderPurchases/edit/{{row.orderPurchase_id}}">Ver Orden</a></td>
                       <td ng-if="row.orderPurchase_id==null">Sin Orden</td>
                       <td>{{row.descuento}}</td>
+
                       <td ng-if="row.tCambio=='sol'">S/.{{row.montoBruto}} <em style="color:blue;">$({{row.montoBrutoDolar}})</em></td>
                       <td ng-if="row.tCambio=='dolar'">$.{{row.montoBrutoDolar}} <em style="color:blue;">S/.({{row.montoBruto}})</em></td>
-                      <td ng-if="row.tCambio=='sol'">S/.{{row.montoTotal}} <em style="color:blue;">$({{row.montoTotalDolar}})</em></td>
+                      <td ng-if="row.tCambio=='sol'">S/.{{row.igv}} <em style="color:blue;">$({{row.igvDolar}})</em></td>
+                      <td ng-if="row.tCambio=='dolar'">$.{{row.igvDolar}} <em style="color:blue;">S/.({{row.igv}})</em></td>
+
+                      <td ng-if="row.tCambio=='sol'">S/.{{row.montoBase}} <em style="color:blue;">$({{row.montoBaseDolar}})</em></td>
+                      <td ng-if="row.tCambio=='dolar'">$.{{row.montoBaseDolar}} <em style="color:blue;">S/.({{row.montoBase}})</em></td>
+                      <td ng-if="row.tCambio=='sol'">S/.{{row.montoTotal}} <em style="color:blue;">
+                      $({{row.montoTotalDolar}})</em></td>
                       <td ng-if="row.tCambio=='dolar'">$.{{row.montoTotalDolar}} <em style="color:blue;">S/.({{row.montoTotal}})</em></td>
                       <td style="color:red;" >{{row.tipoDoc}}-{{row.numdocument}}<br>({{row.serie}})</td>
                       <td ng-if="row.saldo>0"><a  class="btn btn-primary btn-xs" ng-href="/purchases/show/{{row.id}}">Pagar</a>
@@ -165,6 +174,7 @@
                     
                     
                   </table>
+                  </div>
                   <!--======================================================-->
                 
                   <!--============================================================================-->
