--- a/public/js/app/orderPurchases/views/index.html
+++ b/public/js/app/orderPurchases/views/index.html
@@ -145,6 +145,8 @@
                       <th>Almacen</th>
                       <th>Fecha Pedido</th>
                       <th>Fecha Prevista</th>
+                      <th>IGV</th>
+                      <th>Monto Base</th>
                       <th>Descuento</th>
                       <th>Monto Bruto</th>
                       <th>Monto Total</th>
@@ -161,6 +163,8 @@
                       <td>{{row.almacen}}</td>
                       <td>{{row.fechaPedido.substring(0,10)}}</td>
                       <td>{{row.fechaPrevista.substring(0,10)}}</td>
+                      <td>{{row.igv}}</td>
+                      <td>{{row.montoBase}}</td>
                       <td>{{row.descuento}}</td>
                       <td>{{row.montoBruto}}</td>
                       <td>{{row.montoTotal}}</td>
