--- a/public/js/app/orderPurchases/views/index.html
+++ b/public/js/app/orderPurchases/views/index.html
@@ -146,6 +146,7 @@
                       <th>Fecha Pedido</th>
                       <th>Fecha Prevista</th>
                       <th>Descuento</th>
+                      <th>Base Imponible</th>
                       <th>Monto Bruto</th>
                       <th>IGV</th>
                       <th>Monto Total</th>
