--- a/public/js/app/cashes/views/index.html
+++ b/public/js/app/cashes/views/index.html
@@ -77,6 +77,7 @@
                   <table class="table table-bordered">
                     <tr>
                       <th style="width: 10px">#</th>
+                      <th>Usuario</th>
                       <th>Fecha Inicio</th>
                       <th>Fecha Fin</th>
                       <th>Monto Inicial</th>
@@ -85,13 +86,14 @@
                       <th>Monto Bruto</th>
                       <th>Monto Real</th>
                       <th>Descuadre</th>
-
+                      <th>Estado</th>
                       <th style="width: 40px">Editar</th>
                       <th style="width: 40px">Eliminar</th>
                     </tr>
                     
                     <tr ng-repeat="row in cashes">
                       <td>{{$index + 1}}</td>
+                      <td>{{row.nomUser}}</td>
                       <td>{{row.fechaInicio}}</td>
                       <td>{{row.fechaFin}}</td>
                       <td>{{row.montoInicial}}</td>
@@ -100,6 +102,8 @@
                       <td>{{row.montoBruto}}</td>
                       <td>{{row.montoReal}}</td>
                       <td>{{row.descuadre}}</td>
+                      <td ng-if="row.estado1==0">Caja Cerrada</td>
+                      <td ng-if="row.estado1==1">Caja Abierta</td>
                       <td><a ng-click="editcash(row)" class="btn btn-warning btn-xs">Editar</a></td>
                       <td><a ng-click="deletecashHeader(row)" class="btn btn-danger btn-xs">Eliminar</a></td>                      
                     </tr>                   
