--- a/public/js/app/products/views/index.html
+++ b/public/js/app/products/views/index.html
@@ -31,6 +31,10 @@
 
                 <div class="box-header with-border">
                   <h3 class="box-title">Productos</h3>
+                  <label>----->Total Productos:</label>
+                  <input type="text" ng-model="product.canttoalProducts">
+                  <label>----->Total en Stock:</label>
+                  <input type="text" ng-model="product.stockA">
                   <div class="box-tools">
                   <form ng-keyup="searchProduct()">
                     <div class="input-group" style="width: 200px;">
