Recalcula PVP, search de separado,pedido en index, variants_create fixed presentations

--- a/public/js/app/products/views/index.html
+++ b/public/js/app/products/views/index.html
@@ -32,9 +32,11 @@
                 <div class="box-header with-border">
                   <h3 class="box-title">Productos</h3>
                   <label>----->Total Productos:</label>
-                  <input type="text" ng-model="product.canttoalProducts">
+                  <!--<input type="text" ng-model="product.canttoalProducts">-->
+                    <span style="font-size: 16px; color: red; font-weight: bold;">{{product.canttoalProducts}}</span>
                   <label>----->Total en Stock:</label>
-                  <input type="text" ng-model="product.stockA">
+                  <!--<input type="text" ng-model="product.stockA">-->
+                    <span style="font-size: 16px; color: red; font-weight: bold;">{{product.stockA | number:0}}</span>
                   <div class="box-tools">
                   <form ng-keyup="searchProduct()">
                     <div class="input-group" style="width: 200px;">
@@ -89,7 +91,7 @@
                                         <span ng-if="row.proQuantvar == '0'">-</span>
                                 </span>
                         </td>
-                        <td> <button popover-placement="bottom" popover-template="stockTemplate" type="button" class="btn btn-default btn-xs" ng-click="showStock(row.proId)">{{row.stoStockActual}}</button>
+                        <td> <button popover-placement="bottom" popover-template="stockTemplate" type="button" class="btn btn-default btn-xs" ng-click="showStock(row.proId)">{{row.stoStockActual | number:0}}</button>
                         </td>
                       <td><a ng-click="editProduct(row)" class="btn btn-warning btn-xs">Editar</a></td>
                         <td>
@@ -193,8 +195,8 @@
                 <tr ng-repeat="row in stockVariants">
                     <td>{{$index + 1}}</td>
                     <td>{{row.codigo}}</td>                    
-                    <td>{{row.stockActual}}</td>
-                    <td>{{row.porLlegar}}</td>
+                    <td>{{row.stockActual | number:0}}</td>
+                    <td>{{row.porLlegar | number:0}}</td>
                     <td>{{row.nombre}}</td>
                     
                     
