--- a/public/js/app/separateSales/views/index.html
+++ b/public/js/app/separateSales/views/index.html
@@ -30,10 +30,21 @@
 
                 <div class="box-header with-border">
                   <h3 class="box-title">Pedidos</h3>
-                  <div class="box-tools">
+
+                  <div class="box-tools pull-right">
+
+                    <select ng-change="searchOrder()" name="" id="" class="form-control" ng-model="query2">
+                      <option value="0">--TODOS--</option>
+                      <option value="1">
+                        SEPARADO
+                      </option>
+                      <option value="2">PEDIDO</option>
+                    </select>
+
+
                   <form ng-keyup="searchOrder()">
                     <div class="input-group" style="width: 200px;">
-                      <input type="text" ng-model="query"  name="table_search" class="form-control input-sm pull-right" placeholder="Search" />
+                      <input type="text" ng-model="query"  name="table_search" class="form-control input-sm" placeholder="Search" />
                       <div class="input-group-btn">
                         <button class="btn btn-sm btn-default"><i class="fa fa-search"></i></button>
                       </div>
